--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -145,6 +145,44 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.6.6</version>
+		</dependency>
+		<!--jython相关  -->
+		<dependency>
+			<groupId>org.python</groupId>
+			<artifactId>jython</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+
+		<!-- flying-saucer-pdf 转换PDF测试 -->
+		<dependency>
+			<groupId>org.xhtmlrenderer</groupId>
+			<artifactId>flying-saucer-pdf</artifactId>
+			<version>9.1.5</version>
+		</dependency>
+		
+		
+		<dependency>  
+                <groupId>com.itextpdf</groupId>  
+                <artifactId>itextpdf</artifactId>  
+                <version>5.5.9</version>
+            </dependency>  
+              
+             <dependency>  
+                <groupId>com.itextpdf.tool</groupId>  
+                <artifactId>xmlworker</artifactId>  
+                <version>5.5.9</version>
+            </dependency>  
+                       
+            <dependency>  
+                <groupId>com.itextpdf</groupId>  
+                <artifactId>itext-asian</artifactId>  
+                <version>5.2.0</version>
+            </dependency>  
+			
+		<dependency>
+		    <groupId>org.xhtmlrenderer</groupId>
+		    <artifactId>flying-saucer-pdf-itext5</artifactId>
+		    <version>9.0.3</version>
 		</dependency>
 	</dependencies>
 	<build>
