--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,15 @@
 		    <artifactId>flying-saucer-pdf-itext5</artifactId>
 		    <version>9.0.3</version>
 		</dependency>
+		
+		<!-- http相关的 -->
+			<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.3</version>
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<finalName>myJob</finalName>
@@ -193,7 +202,7 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
-					<port>8080</port>
+					<port>8082</port>
 					<uriEncoding>UTF-8</uriEncoding>
 				</configuration>
 			</plugin>
