--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aspects</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 
 
 		<dependency>
@@ -105,7 +110,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.6</version>
+			<version>5.1.44</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mybatis</groupId>
@@ -146,7 +151,7 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.6.6</version>
 		</dependency>
-		<!--jython相关  -->
+		<!--jython相关 -->
 		<dependency>
 			<groupId>org.python</groupId>
 			<artifactId>jython</artifactId>
@@ -159,40 +164,40 @@
 			<artifactId>flying-saucer-pdf</artifactId>
 			<version>9.1.5</version>
 		</dependency>
-		
-		
-		<dependency>  
-                <groupId>com.itextpdf</groupId>  
-                <artifactId>itextpdf</artifactId>  
-                <version>5.5.9</version>
-            </dependency>  
-              
-             <dependency>  
-                <groupId>com.itextpdf.tool</groupId>  
-                <artifactId>xmlworker</artifactId>  
-                <version>5.5.9</version>
-            </dependency>  
-                       
-            <dependency>  
-                <groupId>com.itextpdf</groupId>  
-                <artifactId>itext-asian</artifactId>  
-                <version>5.2.0</version>
-            </dependency>  
-			
+
+
 		<dependency>
-		    <groupId>org.xhtmlrenderer</groupId>
-		    <artifactId>flying-saucer-pdf-itext5</artifactId>
-		    <version>9.0.3</version>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.9</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>com.itextpdf.tool</groupId>
+			<artifactId>xmlworker</artifactId>
+			<version>5.5.9</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itext-asian</artifactId>
+			<version>5.2.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.xhtmlrenderer</groupId>
+			<artifactId>flying-saucer-pdf-itext5</artifactId>
+			<version>9.0.3</version>
+		</dependency>
+
 		<!-- http相关的 -->
-			<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.5.3</version>
 		</dependency>
-		
+
 	</dependencies>
 	<build>
 		<finalName>myJob</finalName>
