--- a/pom.xml
+++ b/pom.xml
@@ -145,12 +145,12 @@
 			<artifactId>druid</artifactId>
 			<version>1.1.12</version>
 		</dependency>
-
+		<!--  
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.6.6</version>
-		</dependency>
+		</dependency>-->
 		<!--jython相关 -->
 		<dependency>
 			<groupId>org.python</groupId>
@@ -190,6 +190,18 @@
 			<version>9.0.3</version>
 		</dependency>
 
+
+		<!-- 日志相关的 -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.3</version>
+		</dependency>
 		<!-- http相关的 -->
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
 		<dependency>
